[Space Ranger - Jeff] - Added the Replica Studios voice over package

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.replicastudios.link": "file:D:/Documents/GitHub/ImTS_ArcadeGameHouse/Packages/replica-unity-link-v0.0.1.tgz",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "2.0.7",
